--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,23 +9,18 @@ body {
   font-size:18px;
   font-family:sans-serif;
   color:#666;
-  min-width:950px;
 }
 
 .wrapper {
-  display:grid;
-  grid-template-columns:340px 1fr 340px;
-  grid-template-rows:auto;
-  grid-template-areas:
-    ". date_view .";
+  display:block;
   height:100%;
   min-height:100%;
-  width:100%;
+  width:600px;
   position:absolute;
   padding:0;
-  margin:0;
   top:0px;
-  z-index:0;
+  left:342.5px;
+  z-index:1;
 }
 
 .sub_wrapper {
@@ -37,13 +32,11 @@ body {
   height:100%;
   min-height:100%;
   width:100%;
-  min-width:950px;
-  position:absolute;
-  align-self:center;
+  position:fixed;
   top:0px;
   margin:0;
   padding:0;
-  z-index:1;
+  z-index:0;
 }
 
 .date_header {
@@ -66,10 +59,7 @@ body {
   display:block;
   height:100%;
   min-height:100%;
-  margin:0;
   padding:0;
-  background-color:#666;
-  grid-area:date_view;
 }
 
 .t_block:first-of-type {
@@ -90,7 +80,7 @@ body {
 }
 
 .t_block:hover {
-  background-color:#666;
+  background-color:lightblue;
   color:#fff;
   transition:0.4s;
 }
@@ -104,17 +94,15 @@ button:hover {
 }
 
 .btn_left {
-  position:fixed;
+  position:absolute;
   top:40%;
-  left:300px;
   text-align:center;
   grid-area:btn_left;
 }
 
 .btn_right {
-  position:fixed;
+  position:absolute;
   top:40%;
-  right:285px;
   text-align:center;
   grid-area:btn_right;
 }
